# cy

./: .clang-format  CMakeLists.txt  README.md
example/: Maybe.cpp  Result.cpp
include/CY/: core.hpp  maybe.hpp  result.hpp  safety.hpp
